--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-<!--    <distributionManagement>-->
-<!--        <repository>-->
-<!--            <id>github</id>-->
-<!--            <name>GitHub YouSoPugly Apache Maven Packages</name>-->
-<!--            <url>https://maven.pkg.github.com/Skjoldr-MC/Core</url>-->
-<!--        </repository>-->
-<!--    </distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub YouSoPugly Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/YouSoPugly/CMTCorePlugin</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
